# OpenMp-ImageStacker

./: README.md
cpp/: CMakeLists.txt
cpp/src/: main.cpp
